cloud_computing/IaC/Terraform/make-ec2-instance/db-sg.tf

resource "aws_security_group" "tech503_abdullahi_db_sg_tf" {
  name        = "tech503-abdullahi-db-sg-tf"
  description = "Security group allowing SSH and MongoDB access from anywhere"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "Allow SSH from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow MongoDB from anywhere"
    from_port   = 27017
    to_port     = 27017
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tech503-abdullahi-db-sg-tf"
  }
}
